--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@ function copyStringToClipboard (str) {
    document.body.removeChild(el);
 }
 
+const getRanHex = size => {
+  let result = [];
+  let hexRef = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'];
+
+  for (let n = 0; n < size; n++) {
+    result.push(hexRef[Math.floor(Math.random() * 16)]);
+  }
+  return result.join('');
+}
+
 function randomNumber(min, max) {
     return Math.random() * (max - min) + min;
 }
 
 function randomByte() {
-    return Math.floor(randomNumber(100,255));
+    return Math.floor(randomNumber(0,255));
 }
 
 function randomDegree() {
@@ -77,13 +87,17 @@ function randomCreditScore() {
 }
 
 function regen() {
-    result = "IP: " + randomByte() + "." + randomByte() + "." + randomByte() + "." + randomByte() + "\n" +
+    result = "IPv4: " + randomByte() + "." + randomByte() + "." + randomByte() + "." + randomByte() + "\n" +
+    "IPv6: " + getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4)+":"+getRanHex(4) + "\n" +
                                                "N: " + randomDegree() + "\n" +
                                                "W: " + randomDegree() + "\n" +
                                                "Weight: " + randomWeight() + "\n" +
                                                "Height: " + randomHeight() + "\n" +
                                                "Speed: " + randomSpeed() + "\n" +
-                                               "Credit Score: " + randomCreditScore();
+                                               "Credit Score: " + randomCreditScore() + "\n" +
+                                               "SS Number: " + Math.floor(randomNumber(100,999))+"-"+Math.floor(randomNumber(10,99))+"-"+Math.floor(randomNumber(1000,9999)) + "\n" +
+                                               "MAC Address: " + getRanHex(2)+":"+getRanHex(2)+":"+getRanHex(2)+":"+getRanHex(2)+":"+getRanHex(2)+":"+getRanHex(2) + "\n" +
+                                               "DNS: 8.8.8.8";
 
     document.getElementById("dox").innerHTML = result;
 
