update yt url to username url

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <h1>Fake Funny Dox</h1>
       <h4>
         By
-        <a href="https://www.youtube.com/channel/UCOQd4XAXiLc0u4VJg3WwfhQ"
-          >Polybagel</a
-        >
+        <a href="https://www.youtube.com/@Polybagel">Polybagel</a>
       </h4>
     </div>
 
