make credit score more accurate

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       }
 
       function randomCreditScore() {
-        return Math.floor(randomNumber(-3000000, 1235));
+        return Math.floor(randomNumber(300, 850));
       }
 
       function regen() {
