remove inline css styles

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <br />
 
     <div class="parentcontainer">
-      <div class="container" style="text-align: left">
+      <div class="container2">
         <p>
           Click the regenerate button to get a fresh dox!<br />(Result is
           automatically copied to the clipboard)
         </p>
 
         <pre><code id="dox">Nothing genereted yet...</code></pre>
-        <div style="text-align: center">
+        <div id="regenbutton">
           <button onclick="regen()">Regenerate</button>
         </div>
       </div>
